# mem0-rest-fork

./: .dockerignore  .gitignore  .pylintrc  Dockerfile  README.md  TEST_README.md  app.py  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  run_tests.sh  sample.env  sample.test.env  test-docker-compose.yml  test.Dockerfile  test_requirements.txt
.github/workflows/: ci.yml
docs/: API.md  ARCHITECTURE.md  CHANGELOG.md  integration-guide.md
patches/: batch_size_handling.patch
src/: __init__.py  config.py  main.py
src/dependencies/: __init__.py
src/middleware/: auth.py  error_handlers.py  rate_limit.py
src/models/: __init__.py
src/routes/: __init__.py  bridge.py  compression.py  dependencies.py  health.py  history.py  memories.py  models.py  operations.py  queries.py  suggestions.py  websocket.py
src/services/: __init__.py  base.py  history.py  memory_service.py  operations.py  queries.py  session.py  streaming.py  types.py
src/utils/: __init__.py  logging.py
src/websocket/: __init__.py  handler.py
tests/: conftest.py
